Spacing and naming fixes

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -7,7 +7,7 @@ body {
     position: absolute;
     top: 0px;
     left: 0px;
-    height: 180px;
+    height: 100px;
     width: 100%;
 }
 
@@ -15,26 +15,27 @@ body {
     position: absolute;
     color: white;
     font-family: 'Montserrat', sans-serif;
-    top: 5%;
+    top: 8%;
     left: 2%;
+    font-size: 8pt;
 }
 
 #logo {
     position: absolute;
-    top: 20%;
+    top: 22%;
     right: 3%;
     height: auto;
     width: auto;
 }
 
 #logo > img {
-    height: 60px;
+    height: 50px;
     width: auto;
 }
 
 #menu {
     position: absolute;
-    bottom: 10px;
+    bottom: -6%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -44,7 +45,8 @@ body {
     font-family: 'Montserrat', sans-serif; 
     font-weight: bold;
     text-align: center;
-    margin: 0 10px;
+    margin: 0 6px;
+    font-size: 12pt;
 }
 
 a {
@@ -61,12 +63,14 @@ a {
     display: none;
 }
 
+/***************************************/
+
 #title-mobile {
     background-color: black;
     top: 0%;
     width: 100%;
-    height: 20vw;
-    font-size: 2vw;
+    height: 15vw;
+    font-size: 1.5vw;
     text-align: left;
     position: fixed;
     color: white;
@@ -94,7 +98,8 @@ a {
 }
 #menu-item-wrapper-mobile {
     position: absolute;
-    top: 25vw;
+    top: 20vw;
+    left: 1vw;
     transition: 1s;
 }
 .menu-item-mobile {
@@ -109,6 +114,7 @@ a {
 .menu-item-mobile p:hover {
     color: rgb(145, 182, 229);
 }
+
 #toggleButton {
     display: inline-block;
     background-color: black;
@@ -120,8 +126,8 @@ a {
     position: fixed;
     width: 10vw;
     height: 10vw;
-    top: 5vw;
-    right: 5vw;
+    top: 2.5vw;
+    right: 2vw;
     z-index: 26;
     cursor: pointer;
     transition: 1s;
